--- a/ContinuousWeb/appsettings.json
+++ b/ContinuousWeb/appsettings.json
@@ -6,3 +6,17 @@
   },
   "AllowedHosts": "*"
 }
+
+{
+  "Logging": {
+      "IncludeScopes": false,
+      "LogLevel": {
+          "Default": "Debug",
+          "System": "Information",
+          "Microsoft": "Information"
+      }
+  },
+  "ApplicationInsights": {
+      "InstrumentationKey": "0c446a0e-6df0-42fb-bdc3-d50bd5ff20fc"
+  }
+}
